data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1420.wast
;; 1. **Test Description**:     Test for a simple `br_if` instruction within a `block` to check label lookup consistency. Use an operand stack with sufficient values to test unwinding and ensure the operand stack height is properly restored.    - **Constraint Checked**: Proper handling of label lookup and stack unwinding.    - **Stack Corruption Check**: Ensures that the stack is not corrupted by incorrect label or stack height management.

(assert_invalid
  (module 
    (func $simple-br_if-test
      (block (i32.const 1) (br_if 0 (i32.const 1)) (drop))
      (i32.const 0) (drop)
      (i32.const 0) (drop)
      (i32.const 0) (drop)
      (i32.add)
    )
  )
  "type mismatch"
)